--- a/site/index.qmd
+++ b/site/index.qmd
@@ -1,7 +1,81 @@
 ---
-title: "site"
+title: "Nic Steyn"
+image: files/index/me.jpg
+page-layout: full
+
+about:
+  id: about
+  template: trestles
+  image-width: 70%
+  links:
+    - icon: github
+      text: Github
+      href: https://github.com/nicsteyn2
+    - text: "{{< ai google-scholar >}} Google Scholar"
+      href: https://scholar.google.com/citations?user=DyNrh4cAAAAJ
+      target: _blank
+    - icon: envelope
+      text: Email
+      href: mailto:nic.steyn@outlook.com
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/nic-steyn/
+      target: _blank
+    - text: "{{< ai orcid >}} ORCID"   # use academic icons, "" are needed
+      href: https://orcid.org/0000-0001-8904-2941
+      target: _blank
+    # - icon: globe
+    #   text: Department of Statistics
+    #   href: https://www.stats.ox.ac.uk/people/nicholas-steyn
+    #   target: _blank
+
+
+# listing:
+#   - id: recent-posts
+#     contents: 
+#       - posts
+#       - posts/post-links.yml
+#     exclude:
+#       title: "Participating APPAM 2024"
+#     type: grid
+#     max-items: 3
+# #    image-height: 150px
+#     page-size: 3 #set same as max-times to remove the page number setting
+#     fields: [image, date, title, author, description]
+#     max-description-length: 75
+#     sort: 
+#       - "date desc"
+#       - "title asc"
 ---
 
-This is a Quarto website.
+ 
+:::{#about}
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+## Bio
+
+I am a doctoral student on the [Modern Statistics and Statistical Machine Learning CDT](https://statml.io) at the University of Oxford, supervised by Professor Christl Donnelly and Dr Kris V Parag.
+
+My thesis focusses on robust statistical methods for analysing infectious disease dynamics with an emphasis on flexible methodology and [valid uncertainty quantification](https://github.com/nicsteyn2/RobustRtEstimators). My research combines Bayesian inference, [sequential Monte Carlo methods](http://nicsteyn2.github.io/SMCforRt/), and epidemiological modelling, with applications to standard epidemiological data, as well as survey data and [wastewater-based surveillance](https://github.com/nicsteyn2/NZWastewaterModelling).
+
+During my studies, I have also worked as a research assistant in the [*The Global Reference Group for Children Affected by Crisis*](https://www.spi.ox.ac.uk/the-global-reference-group-on-children-affected-by-covid-19#collapse3701021), estimating orphanhood in Brazil during the COVID-19 pandemic (publication coming soon), and have held a variety of tutoring positions (departmental, college, and inter-departmental courses).
+
+Past experience includes modelling for policymakers during the COVID-19 pandemic in my home country of New Zealand (March 2020 - September 2021), a quantitative trading internship at Optiver in Sydney (November 2019 - January 2020), and a data analysis internship at a startup in Bangkok (January - February 2018).
+
+## Education
+
+**University of Oxford** | Oxford, United Kingdom<br>
+DPhil in Statistics | 2021 - 2025
+
+**University of Canterbury** | Christchurch, New Zealand<br>
+BSc (Hons) Compuational and Applied Mathematics | 2019<br>
+Awarded with first class
+
+**University of Canterbury** | Christchurch, New Zealand<br>
+BSc Financial Engineering and Statistics | 2016 - 2018<br>
+GPA: 8.96 out of 9
+
+I also studied statistics at **National University of Singapore** on an exchange programme in 2018.
+
+:::
+
+
