--- a/site/index.qmd
+++ b/site/index.qmd
@@ -55,9 +55,9 @@ about:
 
 I am a doctoral student on the [Modern Statistics and Statistical Machine Learning CDT](https://statml.io) at the University of Oxford, supervised by Professor Christl Donnelly and Dr Kris V Parag.
 
-My thesis focusses on robust statistical methods for analysing infectious disease dynamics with an emphasis on flexible methodology and [valid uncertainty quantification](https://github.com/nicsteyn2/RobustRtEstimators). My research combines Bayesian inference, [sequential Monte Carlo methods](http://nicsteyn2.github.io/SMCforRt/), and epidemiological modelling, with applications to standard epidemiological data, as well as survey data and [wastewater-based surveillance](https://github.com/nicsteyn2/NZWastewaterModelling).
+My thesis focuses on robust statistical methods for analysing infectious disease dynamics with an emphasis on flexible methodology and [valid uncertainty quantification](https://github.com/nicsteyn2/RobustRtEstimators). My research combines Bayesian inference, [sequential Monte Carlo methods](http://nicsteyn2.github.io/SMCforRt/), and epidemiological modelling, with applications to standard epidemiological data, as well as survey data and [wastewater-based surveillance](https://github.com/nicsteyn2/NZWastewaterModelling).
 
-During my studies, I have also worked as a research assistant in the [*The Global Reference Group for Children Affected by Crisis*](https://www.spi.ox.ac.uk/the-global-reference-group-on-children-affected-by-covid-19#collapse3701021), estimating orphanhood in Brazil during the COVID-19 pandemic (publication coming soon), and have held a variety of tutoring positions (departmental, college, and inter-departmental courses).
+During my studies, I have also worked as a research assistant in the [*The Global Reference Group for Children Affected by Crisis*](https://www.spi.ox.ac.uk/the-global-reference-group-on-children-affected-by-covid-19#collapse3701021), estimating [orphanhood in Brazil](https://doi.org/10.1101/2025.01.31.25321479) during the COVID-19 pandemic, and have held a variety of tutoring positions (departmental, college, and inter-departmental courses).
 
 Past experience includes modelling for policymakers during the COVID-19 pandemic in my home country of New Zealand (March 2020 - September 2021), a quantitative trading internship at Optiver in Sydney (November 2019 - January 2020), and a data analysis internship at a startup in Bangkok (January - February 2018).
 
