--- a/site/papers.qmd
+++ b/site/papers.qmd
@@ -41,6 +41,11 @@ lightbox: true
 
 # Publications
 
+### 2025
+
+Ogi-Gittins, I., **Steyn, N.**, Polonsky, J., Hart, W. S., Keita, M., Ahuka-Mundeke, S., Hill, E. M., & Thompson, R. N. (2025). Simulation-based inference of the time-dependent reproduction number from temporally aggregated and under-reported disease incidence time series data. *Philosophical Transactions of the Royal Society A*. [http://doi.org/10.1098/rsta.2024.0412](https://royalsocietypublishing.org/doi/10.1098/rsta.2024.0412)
+
+
 ### 2024
 
 Watson, L. M., Plank, M. J., Armstrong, B. A., Chapman, J. R., Hewitt, J., Morris, H., Orsi, A., Bunce, M., Donnelly, C. A., & **Steyn, N**. (2024). Jointly estimating epidemiological dynamics of Covid-19 from case and wastewater data in Aotearoa New Zealand. *Communications Medicine*. [https://doi.org/10.1038/s43856-024-00570-3](https://doi.org/10.1038/s43856-024-00570-3)
