--- a/site/papers.qmd
+++ b/site/papers.qmd
@@ -11,9 +11,12 @@ lightbox: true
 
 **Steyn, N.**,  Parag, K. V., Thompson, R. N., & Donnelly, C. A. (2025). A primer on inference and prediction with epidemic renewal models using sequential Monte Carlo methods. *arXiv preprint*. [https://doi.org/10.48550/arXiv.2503.18875](https://doi.org/10.48550/arXiv.2503.18875)
 
+**Steyn, N.**, Chadeau-Hyam, M., Elliott, P., & Donnelly, C. A. (2025). Bayesian modelling of repeated cross-sectional epidemic prevalence survey data. *medRxiv preprint*. [https://doi.org/10.1101/2025.04.16.25325936](https://doi.org/10.1101/2025.04.16.25325936)
+
 **Steyn, N.**, Unwin, H. J. T., Ponmattam, J., et al. (2025). Regional and national estimates of children affected by all-cause and COVID-19-associated orphanhood and caregiver death in Brazil, by age and family circumstance. *medRxiv preprint*. [https://doi.org/10.1101/2025.01.31.25321479](https://doi.org/10.1101/2025.01.31.25321479)
 
 **Steyn, N.**, Chadeau-Hyam, M., Whitaker, M., et al. (2025). Pandemic-risk-related behaviour change in England from June 2020 to March 2022: REACT-1 study among over 2 million people. *medRxiv preprint*. [https://doi.org/10.1101/2025.03.03.25323250](https://doi.org/10.1101/2025.03.03.25323250)
+
 
 # Online resources
 
