--- a/site/papers.qmd
+++ b/site/papers.qmd
@@ -27,11 +27,13 @@ lightbox: true
 [Pandemic-risk-related behavioural data portal](https://m-whit-ic.shinyapps.io/react-social-shiny/): an R shiny server hosting a large quantity of aggregated data on pandemic-risk-related behaviours in England, collected as part of the REACT-1 study. By making these data publicly available, we hope to enable further research. Methodology can be found in our [preprint](https://doi.org/10.1101/2025.03.03.25323250).
 
 
-# Posters
+# Talks and posters
 
 <div style="max-width: 600px; margin: 1 auto;">
 
-::: {layout-ncol=2}
+::: {layout-ncol=3}
+
+![Presented at Bioinference 2025. Download [here](../files/bioinference.pdf). I was awarded the **best talk by an early career researcher** for this presentation.](../files/bioinference.png)
 
 ![Presented at IDM 2024. Download [here](../files/posters/idm_poster_2024.pdf).](../files/posters/idm_poster_2024.png)
 
