--- a/site/papers.qmd
+++ b/site/papers.qmd
@@ -5,9 +5,16 @@ lightbox: true
 ---
 
 
+# Recent publications
+
+**Steyn, N.**, & Parag, K. V. (2025). Robust uncertainty quantification in popular estimators of the instantaneous reproduction number. *American Journal of Epidemiology*. [https://doi.org/10.1093/aje/kwaf165](https://doi.org/10.1093/aje/kwaf165)
+
+Ogi-Gittins, I., **Steyn, N.**, Polonsky, J., Hart, W. S., Keita, M., Ahuka-Mundeke, S., Hill, E. M., & Thompson, R. N. (2025). Simulation-based inference of the time-dependent reproduction number from temporally aggregated and under-reported disease incidence time series data. *Philosophical Transactions of the Royal Society A*. [http://doi.org/10.1098/rsta.2024.0412](https://royalsocietypublishing.org/doi/10.1098/rsta.2024.0412)
+
+*A complete list of publications can be found lower on this page.*
+
 # Preprints
 
-**Steyn, N.**, & Parag, K. V. (2025). Robust uncertainty quantification in popular estimators of the instantaneous reproduction number. *Accepted at American Journal of Epidemiology*. Preprint accessible here: [https://doi.org/10.1101/2024.10.22.24315918](https://doi.org/10.1101/2024.10.22.24315918)
 
 **Steyn, N.**,  Parag, K. V., Thompson, R. N., & Donnelly, C. A. (2025). A primer on inference and prediction with epidemic renewal models using sequential Monte Carlo methods. *Accepted at Statistics in Medicine*. Preprint accessible here: [https://doi.org/10.48550/arXiv.2503.18875](https://doi.org/10.48550/arXiv.2503.18875)
 
@@ -48,8 +55,9 @@ lightbox: true
 
 ### 2025
 
-Ogi-Gittins, I., **Steyn, N.**, Polonsky, J., Hart, W. S., Keita, M., Ahuka-Mundeke, S., Hill, E. M., & Thompson, R. N. (2025). Simulation-based inference of the time-dependent reproduction number from temporally aggregated and under-reported disease incidence time series data. *Philosophical Transactions of the Royal Society A*. [http://doi.org/10.1098/rsta.2024.0412](https://royalsocietypublishing.org/doi/10.1098/rsta.2024.0412)
+**Steyn, N.**, & Parag, K. V. (2025). Robust uncertainty quantification in popular estimators of the instantaneous reproduction number. *American Journal of Epidemiology*. [https://doi.org/10.1093/aje/kwaf165](https://doi.org/10.1093/aje/kwaf165)
 
+Ogi-Gittins, I., **Steyn, N.**, Polonsky, J., Hart, W. S., Keita, M., Ahuka-Mundeke, S., Hill, E. M., & Thompson, R. N. (2025). Simulation-based inference of the time-dependent reproduction number from temporally aggregated and under-reported disease incidence time series data. *Philosophical Transactions of the Royal Society A*. [http://doi.org/10.1098/rsta.2024.0412](https://royalsocietypublishing.org/doi/10.1098/rsta.2024.0412)
 
 ### 2024
 
