--- a/site/index.qmd
+++ b/site/index.qmd
@@ -55,7 +55,9 @@ about:
 
 I am a doctoral student on the [Modern Statistics and Statistical Machine Learning CDT](https://statml.io) at the University of Oxford, supervised by Professor Christl Donnelly and Dr Kris V Parag.
 
-My thesis focuses on robust statistical methods for analysing infectious disease dynamics with an emphasis on flexible methodology and [valid uncertainty quantification](https://github.com/nicsteyn2/RobustRtEstimators). My research combines Bayesian inference, [sequential Monte Carlo methods](http://nicsteyn2.github.io/SMCforRt/), and epidemiological modelling, with applications to standard epidemiological data, as well as [survey data](https://doi.org/10.1101/2025.04.16.25325936) ([see also]((https://doi.org/10.1101/2025.03.03.25323250))) and [wastewater-based surveillance](https://github.com/nicsteyn2/NZWastewaterModelling).
+My thesis focuses on robust statistical methods for analysing infectious disease dynamics with an emphasis on **uncertainty quantification**. Recent work has included developing a theoretical/philosophical decision-theoretic framework targeted for the practicalities of epidemiology ([see our preprint here](https://doi.org/10.48550/arXiv.2509.20013)), and extending existing popular methods in the field to improve the robustness of their UQ ([see our published paper here](https://doi.org/10.1093/aje/kwaf165)).
+
+Further research from my thesis combines Bayesian inference, [sequential Monte Carlo methods](http://nicsteyn2.github.io/SMCforRt/) ([see also](https://doi.org/10.1002/sim.70204)), and epidemiological modelling, with applications to standard epidemiological data, as well as [survey data](https://doi.org/10.1101/2025.04.16.25325936) ([see also]((https://doi.org/10.1101/2025.03.03.25323250))) and [wastewater-based surveillance](https://github.com/nicsteyn2/NZWastewaterModelling).
 
 During my studies, I have also worked as a research assistant in the [*The Global Reference Group for Children Affected by Crisis*](https://www.spi.ox.ac.uk/the-global-reference-group-on-children-affected-by-covid-19#collapse3701021), estimating [orphanhood in Brazil](https://doi.org/10.1101/2025.01.31.25321479) during the COVID-19 pandemic, and have held a variety of tutoring positions (departmental, college, and inter-departmental courses).
 
